Fix styling on smaller screens

--- a/packages/components/src/DataList/DataList.css
+++ b/packages/components/src/DataList/DataList.css
@@ -39,7 +39,7 @@
   display: grid;
   column-gap: var(--space-small);
   align-items: flex-start;
-  grid-template-columns: max-content auto;
+  grid-template-columns: max-content minmax(0px, auto);
 
   @media (--medium-screens-and-up) {
     align-items: center;
